# atlas-gic

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/atlas/: __init__.py  cli.py  config.py
src/atlas/agents/: autoresearch.py  backtest_loop.py  eod_cycle.py  market_data.py  scorecard.py
src/atlas/data/providers/: __init__.py  finnhub.py  fmp.py  fred.py
src/atlas/prompts/: __init__.py
src/atlas/prompts/layer1/: central_bank.md  china.md  commodities.md  dollar.md  emerging_markets.md  geopolitical.md  institutional_flow.md  news_sentiment.md  volatility.md  yield_curve.md
src/atlas/prompts/layer2/: biotech.md  consumer.md  energy.md  financials.md  industrials.md  relationship_mapper.md  semiconductor.md
src/atlas/prompts/layer3/: ackman.md  aschenbrenner.md  baker.md  druckenmiller.md
src/atlas/prompts/layer4/: alpha_discovery.md  autonomous_execution.md  cio.md  cro.md
src/atlas/utils/: git_ops.py  llm.py  logging.py
